@@ -37,6 +37,6 @@ struct _TnyCamelMimePartPriv
 #define TNY_CAMEL_MIME_PART_GET_PRIVATE(o)	\
 	(G_TYPE_INSTANCE_GET_PRIVATE ((o), TNY_TYPE_CAMEL_MIME_PART, TnyCamelMimePartPriv))
 
-#endif
-
 void _tny_camel_mime_part_set_part (TnyCamelMimePart *self, CamelMimePart *part);
+
+#endif
