@@ -1,3 +1,12 @@
+2008-11-18  Sergio Villar Senin  <svillar@igalia.com>
+
+	* libtinymail-camel/tny-camel-mime-part-priv.h: Moved a function
+	header into the #ifdef
+
+	* libtinymail-camel/tny-camel-folder.c: several bugfixes. Fixed an
+	invalid comparison (a typo most likely). Fixed several memory
+	leaks as well in some lists that were not freed.
+
 2008-11-13  Thomas Guillem  <thomas.guillem@gmail.com>
 
 	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-message-cache.c:
